Fixed a layout issue in Chrome

--- a/style/partials/_media-queries.scss
+++ b/style/partials/_media-queries.scss
@@ -53,8 +53,8 @@
     width: 50%;
     position: relative;
     right: -45%;
-    top: -75%;
-    margin-bottom: -18rem;
+    top: -16rem;
+    margin-bottom: -17rem;
     z-index: 10;
     box-shadow: -10px 10px 0 0 $bright-aqua;
   }
@@ -249,6 +249,18 @@
     font-size: 1.4rem;
     text-align: right;
     z-index: 999;
+  }
+
+  .menu-icon:hover {
+    color: $bright-aqua;
+  }
+
+  .menu-icon:active {
+    color: $pale-grey;
+  }
+
+  .navigation-toggle:focus ~ .menu-icon {
+    color: $bright-aqua
   }
 
   .navigation-toggle:checked ~ .main-nav {
