--- a/style/styles.css
+++ b/style/styles.css
@@ -971,8 +971,8 @@ textarea:focus {
     width: 50%;
     position: relative;
     right: -45%;
-    top: -75%;
-    margin-bottom: -18rem;
+    top: -16rem;
+    margin-bottom: -17rem;
     z-index: 10;
     -webkit-box-shadow: -10px 10px 0 0 #08fded;
             box-shadow: -10px 10px 0 0 #08fded;
@@ -1156,6 +1156,15 @@ textarea:focus {
     font-size: 1.4rem;
     text-align: right;
     z-index: 999;
+  }
+  .menu-icon:hover {
+    color: #08fded;
+  }
+  .menu-icon:active {
+    color: #f3faff;
+  }
+  .navigation-toggle:focus ~ .menu-icon {
+    color: #08fded;
   }
   .navigation-toggle:checked ~ .main-nav {
     right: 5%;
